package  guitarHero;
public interface GuitarBehavior {
 public void play();
}
