package  guitarHero;
public class Guitar_GibsonLesPaul implements GuitarBehavior {

    public void play() {
        System.out.println("Playing Gibson Les Paul");
    }
}
