package  guitarHero;
public class Guitar_Telecaster implements GuitarBehavior {

	public void play() {
		System.out.println("Playing Telecaster");
		}

}
