package  guitarHero;
public interface SoloBehavior {
	 public void solo();
}
