package  guitarHero;
public class Solo_JumpOffStage implements SoloBehavior {

	@Override
	public void solo() {
		System.out.println("jumping off stage!");
	}

}
