@startuml

title __GUITARHERO's Class Diagram__\n


    namespace guitarHero {
      abstract class guitarHero.GameCharacter {
          + GameCharacter()
          + change()
          + playGuitar()
          + playSolo()
          + setGuitar()
          + setSolo()
      }
    }

  


    namespace guitarHero {
      class guitarHero.GameCharacterHendrix {
          + GameCharacterHendrix()
          + change()
          + playSolo()
      }
    }

  


    namespace guitarHero {
      class guitarHero.GameCharacterSlash {
          + GameCharacterSlash()
          + change()
          + playSolo()
      }
    }

  


    namespace guitarHero {
      class guitarHero.GameCharacterYoung {
          + GameCharacterYoung()
      }
    }

  


    namespace guitarHero {
      interface guitarHero.GuitarBehavior {
          {abstract} + play()
      }
    }

  


    namespace guitarHero {
      class guitarHero.Guitar_GibsonLesPaul {
          + play()
      }
    }

  


    namespace guitarHero {
      class guitarHero.Guitar_GibsonSG {
          + play()
      }
    }

  


    namespace guitarHero {
      class guitarHero.Guitar_Telecaster {
          + play()
      }
    }

  


    namespace guitarHero {
      interface guitarHero.SoloBehavior {
          {abstract} + solo()
      }
    }

  


    namespace guitarHero {
      class guitarHero.Solo_JumpOffStage {
          + solo()
      }
    }

  


    namespace guitarHero {
      class guitarHero.Solo_PutGuitarOnFire {
          + solo()
      }
    }

  


    namespace guitarHero {
      class guitarHero.Solo_SmashTheGuitar {
          + solo()
      }
    }

  


    namespace guitarHero {
      class guitarHero.TestGuitarHero {
          {static} + main()
      }
    }

  

  guitarHero.GameCharacter o-- guitarHero.GuitarBehavior : guitarBehavior
  guitarHero.GameCharacter o-- guitarHero.SoloBehavior : soloBehavior
  guitarHero.GameCharacterHendrix -up-|> guitarHero.GameCharacter
  guitarHero.GameCharacterSlash -up-|> guitarHero.GameCharacter
  guitarHero.GameCharacterYoung -up-|> guitarHero.GameCharacter
  guitarHero.Guitar_GibsonLesPaul .up.|> guitarHero.GuitarBehavior
  guitarHero.Guitar_GibsonSG .up.|> guitarHero.GuitarBehavior
  guitarHero.Guitar_Telecaster .up.|> guitarHero.GuitarBehavior
  guitarHero.Solo_JumpOffStage .up.|> guitarHero.SoloBehavior
  guitarHero.Solo_PutGuitarOnFire .up.|> guitarHero.SoloBehavior
  guitarHero.Solo_SmashTheGuitar .up.|> guitarHero.SoloBehavior


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
